--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <!--ここは消さない-->
     <header class="header" >
         <p>グリ猫のブログ</p>
+        <a href="https://ttomeam47710829.wixsite.com/my-site-2">トミーおばちゃん公式ページ</a>
     </header>
     <!--ここは消さない-->
 
