--- a/index.html
+++ b/index.html
@@ -37,12 +37,16 @@
         <img class="png1" src="スクリーンショット 2025-02-20 18.15.16.png" >
     </div>
 
-    <!--ブログ２
     <div class="blog1" >
-        <h1>グリ猫のブログ1 (2025/2/20)</h1>
-        <h2></h2>
-        <img class="png1" src="" >
+        <h1>グリ猫のブログ2 (2025/2/22)</h1>
+        <h2>今日は猫の日です。</h2>
+        <h2>グリちゃんにマフラーをプレゼントしました。</h2>
+        <img class="png1" src="スクリーンショット 2025-02-22 16.52.55.png" >
     </div>
-    -->
+    
+  
+    
+  
+
 </body>
 </html>
